TESTS = runtest.sh \
	setenv.sh \
	start_proxy.sh \
	stop_proxy.sh \
	test_build.cnf \
	test_long.cnf \
	test_suites.cnf \
	mysql-proxy.xml \
	test-1-1.sh \
	test-1-2.sh \
	test-1-3.sh \
	test-1-4.sh \
	test-1-5.sh \
	test-2-1.sh \
	test-2-2.sh \
	test-2-3.sh \
	test-2-4.sh \
	test-2-5.sh \
	test-3-1.sh \
	test-3-2.sh \
	test-3-3.sh \
	test-3-4.sh \
	test-3-5.sh \
	test-3-6.sh \
	test-3-7.sh \
	test-3-8.sh \
	test-3-9.sh \
	test-4-1.sh \
	test-4-2.sh \
	test-4-3.sh \
	test-4-4.sh \
	test-4-5.sh \
	test-4-6.sh \
	test-4-7.sh \
	test-4-8.sh \
	test-4-9.sh \
	test-5-1.sh \
	test-6-1.sh \
	test-6-2.sh \
	test-8-1.sh \
	test-8-2.sh \
	test-8-3.sh \
	test-8-4.sh \
	test-8-5.sh \
	test-8-6.sh \
	test-18-1.sh \
	test-18-2.sh \
	test-18-3.sh \
	test-18-4.sh \
	test-19-1.sh \
	test-19-2.sh \
	test-19-3.sh \
	test-19-4.sh \
	test-19-5.sh \
	test-19-6.sh \
	test-19-7.sh \
	test-19-8.sh \
	test-19-9.sh \
	test-19-10.sh \
	test-19-11.sh \
	test-20-1.sh \
	test-20-2.sh \
	test-admin-thread.sh \
	test-processlist.sh \
	test_bug_character_set_results.sh

EXTRA_DIST=$(TESTS)

distclean-local:
	rm -f ${builddir}/core.* ${builddir}/vgcore.*
